簡易的にクラス化してみた

--- a/Json/JsonTest.vcxproj
+++ b/Json/JsonTest.vcxproj
@@ -118,6 +118,7 @@
     <ClCompile Include="Source.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="JsonRead.hpp" />
     <ClInclude Include="picojson.h" />
   </ItemGroup>
   <ItemGroup>
