--- a/Json/JsonTest.vcxproj.filters
+++ b/Json/JsonTest.vcxproj.filters
@@ -23,6 +23,9 @@
     <ClInclude Include="picojson.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
+    <ClInclude Include="JsonRead.hpp">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="test.json">
